Update confirm-page design, fix icon overflow in add-friend page

--- a/src/app/pages/add-friend/add-friend.page.scss
+++ b/src/app/pages/add-friend/add-friend.page.scss
@@ -11,7 +11,7 @@ ion-grid {
   .scan-btn {
     display: flex;
     justify-content: center;
-    margin-top: 75px;
+    margin-top: 50px;
 
     /* ion-icon {
       font-size: 300px;
@@ -19,7 +19,7 @@ ion-grid {
     } */
 
     ion-img {
-      transform: scale(2);
+      transform: scale(1.75);
     }
   }
 }
