--- a/src/app/pages/friend-confirmation/friend-confirmation.page.scss
+++ b/src/app/pages/friend-confirmation/friend-confirmation.page.scss
@@ -2,35 +2,32 @@
   min-height: 100%;
   background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
 
-  ion-card {
-    height: 100%;
-    margin: 10px 20px;
-    border-radius: 10px;
-    opacity: 0.9;
+  .header {
+    padding: 25px 50px 0;
 
-    ion-card-header {
-      padding: 0;
-
-      ion-img {
-        border-bottom: solid 2px black;
-      }
-
-      ion-card-title {
-        font-size: 20px;
-        font-weight: 800;
-      }
+    ion-img {
+      border-radius: 100%;
+      overflow: hidden;
     }
 
-    ion-card-content {
-      font-size: 18px;
-      font-weight: 600;
-    }
-
-    ion-button {
-      margin: 0;
-      width: 100%;
-      height: 70px;
-      --border-radius: 0;
+    h4 {
+      font-size: 26px;
+      font-weight: 800;
+      color: rgb(59, 59, 59);
     }
   }
+
+  p {
+    font-size: 16px;
+    font-weight: 600;
+    color: rgb(59, 59, 59);
+  }
 }
+
+ion-button {
+  margin: 0;
+  width: 100%;
+  height: 70px;
+  --border-radius: 0;
+}
+
